--- a/src/commonStyles/theme.css
+++ b/src/commonStyles/theme.css
@@ -2,9 +2,11 @@
     --text_black: #000000;
     --text_gray: #7E878E;
     --text_gray-light: #7C878E;
+    --text_blue-light: #489DCF;
 
     --background_blue-gray-light: #F1F5F7;
     --background_white: #fff;
+    --background_button: #287dac;
 
     --border-blue-light: #B4D6EC; 
     
